k8s/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
  labels:
    environment: dev
    managed-by: argocd
