k8s/apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-api
  namespace: healthcare
  labels:
    app: healthcare-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthcare-api
  template:
    metadata:
      labels:
        app: healthcare-api
    spec:
      containers:
        - name: healthcare-api
          image: 406260455716.dkr.ecr.us-east-1.amazonaws.com/healthcare-api:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
