k8s/apps/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: healthcare
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
