k8s/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-api
  namespace: healthcare
spec:
  selector:
    app: healthcare-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
